--- a/Journals.App/Journals.App.Main/MainPage.xaml
+++ b/Journals.App/Journals.App.Main/MainPage.xaml
@@ -2,24 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Journals.App"
-             x:Class="Journals.App.MainPage">
+             x:Class="Journals.App.MainPage" Title="Вход">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Journals!"
-                VerticalOptions="Start" 
-                HorizontalOptions="CenterAndExpand" >
-                <Label.Style>
-                    <Style TargetType="Label">
-                        <Setter Property="TextColor" Value="DarkBlue" />
-                        <Setter Property="BackgroundColor" Value="Silver" />
-                    </Style>
-                </Label.Style>
-            </Label>
+        <StackLayout Padding="5,10,5,5">
+            <Label Text="Имя пользователя" />
             <Entry x:Name="entLogin" Placeholder="Введите логин">
             </Entry>
+            <Label Text="Пароль" />
             <Entry x:Name =" entPassword" Placeholder="Введите пароль" IsPassword="True">
             </Entry>
-            <Button x:Name="btnLogin" Text="Вход" Clicked="OnLogin" />
+            <Button x:Name="btnLogin" Text="Вход" Clicked="OnLoginClick" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
