Закладки в первом приближении; переход на инъекцию зависимостей для нативных сущностей

--- a/Journals.App/Journals.App.Main/MainPage.xaml
+++ b/Journals.App/Journals.App.Main/MainPage.xaml
@@ -1,17 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<NavigationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Journals.App"
              x:Class="Journals.App.MainPage" Title="Вход">
-    <ContentPage.Content>
-        <StackLayout Padding="5,10,5,5">
-            <Label Text="Имя пользователя" />
-            <Entry x:Name="entLogin" Placeholder="Введите логин">
-            </Entry>
-            <Label Text="Пароль" />
-            <Entry x:Name =" entPassword" Placeholder="Введите пароль" IsPassword="True">
-            </Entry>
-            <Button x:Name="btnLogin" Text="Вход" Clicked="OnLoginClick" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    <NavigationPage.Content>
+
+    </NavigationPage.Content>
+</NavigationPage>
