--- a/Journals.App/Journals.App.Main/MainPage.xaml
+++ b/Journals.App/Journals.App.Main/MainPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Journals.App"
              x:Class="Journals.App.MainPage" Title="Вход">
+    <NavigationPage.ToolbarItems>
+        
+    </NavigationPage.ToolbarItems>
     <NavigationPage.Content>
 
     </NavigationPage.Content>
